[package]
name = "bbbase64"
version = "0.1.1"
edition = "2021"
authors = ["James Logan <jlogan03@gmail.com>"]
description = "Bare-Bones Base64: no-std, heapless, memory-safe encoding/decoding library for embedded"
homepage = "https://github.com/jlogan03/bbbase64"
repository = "https://github.com/jlogan03/bbbase64"
readme = "./README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
